# python-module

./: README.md  pyproject.toml  tox.ini
qbreader/: __init__.py  types.py
